gl31-master/src/test/deca/syntax/valid/sansobjet/Advanced_test_1.deca
// Description:
//    Affectation et typage : associe un boolean a un boolean
//
// Resultats:
//    Ligne 15: Affectation de types compatibles
//
// Historique:
//    cree le 15/01/2021

{
    int a = 3;
    float b = 3.5;
    boolean c = (a==3);
    if (b==a + 7 / 4 || !c){
        while ((b==3.5)==false){
            print(a+b);
        }
    }
    else if (4 == (a*1234)){
        print(21.0);
    }
    else{
        if (c!= !c){
            print("hello");
        }
        print("ala");
    }
}
