gl31-master/src/test/deca/syntax/invalid/sansobjet/instanceof_program.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 12 : Erreur, expression missing after 'instanceof'
//
// Historique:
//    cree le 13/01/2021
{
    boolean b;

    if(b instanceof){
        print(b);
    }
    else{
        print("no");
    }
}

